# ssr

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yaml  release-please.yaml
src/: doc.rs  lang.rs  lib.rs  main.rs  query.rs
